--- a/秋招面经/帆软一面.md
+++ b/秋招面经/帆软一面.md
@@ -13,3 +13,9 @@
 13. 讲一下参加的比赛
 14. 如果有一个亿级的数据量，所有数据都是1w到2w的整数，如何排序存储
 15. 判断一个代码的功能
+16. 如何学习一个新技术，最近学了什么新技术
+17. 如果项目上线后SQL执行很慢，如何怎么问题和优化
+18. 慢查询日志的dump操作的具体指令是什么(mysqldumpslow)
+19. 怎么查询CPU使用率
+20. mvcc是怎么工作的
+21. 如何对分布式锁续时
